Added image downloader and parsing

--- a/app/src/main/res/layout/fragment_persons.xml
+++ b/app/src/main/res/layout/fragment_persons.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/gray_50" android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/tvPersonss" />
+
     <android.support.v7.widget.RecyclerView android:id="@+id/rvPersonsDating" android:paddingBottom="88dp" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" />
+
 </FrameLayout>
