--- a/app/src/main/res/layout/item_list_image.xml
+++ b/app/src/main/res/layout/item_list_image.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="72dip"
-        android:layout_height="72dip"
+        android:layout_width="360dip"
+        android:layout_height="360dip"
         android:layout_margin="3dip"
         android:adjustViewBounds="true"
         android:contentDescription="Image"
+        android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         />
 
