--- a/app/src/main/res/layout/item_list_image.xml
+++ b/app/src/main/res/layout/item_list_image.xml
@@ -15,4 +15,24 @@
         android:scaleType="centerCrop"
         />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btnDislike"
+            android:layout_marginLeft="96dp"
+            android:id="@+id/btnDislike" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btnLike"
+            android:layout_marginRight="96dp"
+            android:id="@+id/btnLike"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
+
 </LinearLayout>
