--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJson"
-        android:layout_gravity="left|top" />
+        android:text="@string/btnGenerate"
+        android:id="@+id/btnGenerate"
+        android:layout_gravity="center" />
 </FrameLayout>
