--- a/app/src/main/res/layout/item_list_image.xml
+++ b/app/src/main/res/layout/item_list_image.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/image"
@@ -11,9 +17,20 @@
             android:layout_margin="3dip"
             android:adjustViewBounds="true"
             android:contentDescription="Image"
-            android:layout_gravity="center_horizontal"
-            android:scaleType="centerCrop"
-            />
+            android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:src="@drawable/heart"
+            android:layout_width="100dip"
+            android:layout_height="100dip"
+            android:id="@+id/heart"
+            android:layout_alignBottom="@id/image"
+            android:layout_alignLeft="@id/image"
+            android:layout_alignRight="@id/image"
+            android:visibility="invisible"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
