Added default images to list.

--- a/app/src/main/res/layout/fr_download_images.xml
+++ b/app/src/main/res/layout/fr_download_images.xml
@@ -1,29 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <ProgressBar
-        android:id="@+id/progress"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ProgressBar>
-
-    <ImageView
-        android:id="@+id/target0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/target1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/target2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+<ListView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/dark_backgr"
+    android:id="@+id/persons_list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
