--- a/app/src/main/res/layout/fr_download_images.xml
+++ b/app/src/main/res/layout/fr_download_images.xml
@@ -2,6 +2,6 @@
 <ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/dark_backgr"
-    android:id="@+id/persons_list"
+    android:id="@+id/listview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
