--- a/app/src/main/res/layout/fr_viewpager.xml
+++ b/app/src/main/res/layout/fr_viewpager.xml
@@ -1,5 +1,20 @@
-<android.support.v4.view.ViewPager android:id="@+id/pager"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/dark_backgr"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:layout_above="@+id/appbar_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"></android.support.v4.view.ViewPager>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.gusar.datingapp.view.SlidingTabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"
+        android:background="@android:color/white"/>
+
+</LinearLayout>
