--- a/app/src/main/res/layout/fr_viewpager.xml
+++ b/app/src/main/res/layout/fr_viewpager.xml
@@ -8,7 +8,8 @@
     <com.gusar.datingapp.view.SlidingTabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:elevation="2dp"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
